--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.2",
     "egg-mysql": "^3.0.0",
+    "egg-qiniu-upload": "^1.1.4",
     "egg-redis": "^2.0.0",
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
