--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "bankcardinfo": "^2.0.4",
     "cnpm": "^6.0.0",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
