--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bankcardinfo": "^2.0.4",
     "cnpm": "^6.0.0",
+    "crypto-js": "^3.1.9-1",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
     "egg-mysql": "^3.0.0",
