--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
     "egg-view-ejs": "^2.0.0",
+    "form-data": "^2.3.3",
     "ihuyi106": "^1.0.1",
     "mysql": "^2.16.0",
     "puppeteer": "^1.10.0"
