--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql": "^2.16.0",
     "puppeteer": "^1.10.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "sleep": "^5.2.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
