--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bankcardinfo": "^2.0.4",
     "cnpm": "^6.0.0",
+    "cos-nodejs-sdk-v5": "^2.5.1",
     "crypto-js": "^3.1.9-1",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
