--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ihuyi106": "^1.0.1",
     "mysql": "^2.16.0",
     "puppeteer": "^1.10.0",
+    "qcloudsms_js": "^0.1.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "sleep": "^5.2.3"
