--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bankcardinfo": "^2.0.4",
     "cnpm": "^6.0.0",
     "cos-nodejs-sdk-v5": "^2.5.1",
+    "cron": "^1.6.0",
     "crypto-js": "^3.1.9-1",
     "egg": "^2.2.1",
     "egg-jwt": "^3.1.4",
@@ -40,7 +41,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-zss",
+    "start": "egg-scripts start",
     "stop": "egg-scripts stop --title=egg-server-zss",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
