--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "cron": "^1.6.0",
     "crypto-js": "^3.1.9-1",
     "egg": "^2.2.1",
+    "egg-alinode": "^2.0.1",
     "egg-jwt": "^3.1.4",
     "egg-mysql": "^3.0.0",
     "egg-qiniu-upload": "^1.1.4",
     "egg-redis": "^2.0.0",
-    "egg-scripts": "^2.5.0",
+    "egg-scripts": "^2.11.0",
     "egg-static": "^2.1.1",
     "egg-view-ejs": "^2.0.0",
     "form-data": "^2.3.3",
